Change generator of BBS and move to separate file